--- a/index.html
+++ b/index.html
@@ -10,75 +10,84 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container" id="notWin" >
         <header>
             <h1>Matching Game</h1>
         </header>
+        
+            <section class="score-panel">
+                <ul class="stars">
+                    <li><i class="fa fa-star green"></i></li>
+                    <li><i class="fa fa-star green"></i></li>
+                    <li><i class="fa fa-star green"></i></li>
+                </ul>
 
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star green"></i></li>
-        		<li><i class="fa fa-star green"></i></li>
-        		<li><i class="fa fa-star green"></i></li>
-        	</ul>
+                <span class="moves">0</span> Moves
 
-        	<span class="moves">0</span> Moves
+                <div class="restart">
+                    <i class="fa fa-repeat"></i>
+                </div>
+            </section>
 
-            <div class="restart">
-                <i class="fa fa-repeat"></i>
-        	</div>
-        </section>
 
-        <ul class="deck">
-            <li class="card">
-                     <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-            <li class="card">
-                <i class="fa"></i>
-            </li>
-        </ul>
+            <ul class="deck">
+                <li class="card">
+                        <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+                <li class="card">
+                    <i class="fa"></i>
+                </li>
+            </ul>
+       
+    </div>
+
+    <div class="container win" id="win" style="display: none">
+            <i class="fa fa-check circle"></i>
+            <h1>Congratulations! you won</h1>
+            <p id="message"> </p>
+            <button id="replay" > Play again! </button>
     </div>
 
     <script src="js/app.js"></script>
