fix matched cards counter after restart game fix some uncorrect behaviers when click on card fix timer pug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <li><i class="fa fa-star green"></i></li>
                 </ul>
 
-                <span class="moves">0</span> Moves
+                <span class="moves">0 Moves</span> 
+
+                <span class="timer mx-2">0 sec</span>
 
                 <div class="restart">
                     <i class="fa fa-repeat"></i>
