improve code change function of current number of moves change way that shows timer ex:" 1:22 "

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Matching Game</h1>
         </header>
         
-            <section class="score-panel">
+            <article class="score-panel">
                 <ul class="stars">
                     <li><i class="fa fa-star green"></i></li>
                     <li><i class="fa fa-star green"></i></li>
@@ -24,12 +24,12 @@
 
                 <span class="moves">0 Moves</span> 
 
-                <span class="timer mx-2">0 sec</span>
+                <span class="timer mx-2">0:0 sec</span>
 
                 <div class="restart">
                     <i class="fa fa-repeat"></i>
                 </div>
-            </section>
+            </article>
 
 
             <ul class="deck">
